syntax = "proto3";

option go_package = "github.com/omecodes/store/proto/gen/go;pb";

message UserRole {
  string user  = 1;
  string role = 2;
}